[metadata]
name = zxx
version = 1.0.0
author = Yifan Zhang
author_email = zyfcode@outlook.com
description = A Python package developed by “Zheng-Xin-She” (formerly “Zheng-Xin-Xin”) Women’s Football Team at Peking University, mainly used for editing game highlights.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pypi.org/project/zxx
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src
